# public-library

./: .gitignore  README.md
pl-client/: .gitignore  Dockerfile  docker-compose.yml  next.config.js  package-lock.json  package.json  tsconfig.json
pl-client/prisma/: schema.prisma
pl-client/src/app/: client.tsx  globals.scss  index.module.scss  layout.tsx  page.tsx
pl-client/src/app/about/: page.tsx
pl-client/src/app/account/: client.tsx  page.tsx
pl-client/src/app/account/auth/: client.tsx  page.tsx
pl-client/src/app/api/: dto.ts
pl-client/src/components/header/: header.tsx
pl-client/src/components/work/: preview.module.scss  preview.tsx
pl-client/src/data/: instance.ts  libraries.ts  prisma.ts  user.ts
pl-client/src/lib/canvas/: index.ts
pl-client/src/utils/: cookies.ts
pl-library/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
pl-library/crates/pl-diesel/: Cargo.toml
pl-library/crates/pl-diesel/src/: lib.rs  models.rs
pl-library/crates/pl-diesel/src/crud/: mod.rs  users.rs
pl-library/pages/: admin.ejs  index.ejs
pl-library/prisma/: schema.prisma
pl-library/public/: admin.js  cookie.js  index.js  style.css
pl-library/src/: index.ts  main.rs
pl-library/src/api/: api.ts  mod.rs  user.rs
pl-library/src/api/comments/: comments.dto.ts  comments.ts
pl-library/src/api/files/: files.dto.ts  files.ts
pl-library/src/api/keys/: keys.dto.ts  keys.ts
pl-library/src/api/user/: user.ts
pl-library/src/api/users/: users.dto.ts  users.ts
pl-library/uploads/: INFO.md
(+19 files in other folders)
